# NotificationManager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  qml.qrc
.github/workflows/: cmake.yml
app/: CMakeLists.txt
app/include/: application.h  plugin_loader.h
app/src/: application.cpp  main.cpp  main.qml  plugin_loader.cpp
app/src/resources/: main.qml
core/: CMakeLists.txt
core/include/: abstract_core.h  base_interface.h  connect_interface.h  core.h  core_export.h  gui_interface.h  logic_interface.h  plugin_loader.h  pre-interface.h
core/src/: abstract_core.cpp  core.cpp  logic_interface.cpp  plugin_loader.cpp
interfacePlugin/: CMakeLists.txt
logicPlugin/: CMakeLists.txt
plugins/: CMakeLists.txt  metadata.json.in
plugins/common/: CMakeLists.txt
plugins/common/include/: notification_info.h
plugins/common/src/: notification_info.cpp
plugins/gui/: CMakeLists.txt
plugins/gui/include/: metadata.json  notification_gui_plugin.h
plugins/gui/src/: notification_gui_plugin.cpp  notification_gui_plugin.cpp.autosave
plugins/gui/src/resources/: interface.qrc  qml.qrc
plugins/gui/src/resources/ControlPanel/: ControlPanel.qml
plugins/gui/src/resources/qml/: listView.qml  main.qml
plugins/gui/src/resources/qml/ControlPanel/: ControlPanel.qml  ToolBar.qml
plugins/gui/src/resources/qml/LeftArea/: AppName.qml  LeftArea.qml  MenuSection.qml
plugins/gui/src/resources/qml/Notification/: Notification.qml  NotificationArea.qml  NotificationWindow.qml  listView.qml  qmldir
plugins/gui/src/resources/qml/RightArea/: AdvicesPage.qml  ArchivePage.qml  CustomScrollBar.qml  MainPage.qml  MainPage.qml.autosave  PageRect.qml  PagesHandler.qml  SettingsPage.qml
plugins/interface/: CMakeLists.txt  gui_plugin.cpp  qml.qrc
plugins/interface/include/: base_interface.h  gui_plugin.h  interface.h  interface_plugin_export.h
plugins/interface/src/: interface.cpp
plugins/interface/src/qml/BottomScreen/: BottomScreen.qml
plugins/interface/src/qml/ControlPanel/: ControlPanel.qml
plugins/interface/src/qml/Notification/: Notification.qml  NotificationList.qml
plugins/interface/src/resources/BottomScreen/: BottomScreen.qml
plugins/interface/src/resources/ControlPanel/: ControlPanel.qml
plugins/interface/src/resources/Notification/: Notification.qml  NotificationArea.qml
plugins/logic/: CMakeLists.txt
plugins/logic/include/: abstract_notification.h  history_model.h  i_notify_model.h  imodel.cpp  imodel.h  logic_plugin_export.h  metadata.json  notification_entity.h  notification_info.h  notification_logger.h  notification_logic_plugin.h  notification_type.h  notify_logic_plugin.h  notify_model.h  type_manager.h
plugins/logic/src/: abstract_notification.cpp  history_model.cpp  notification_entity.cpp  notification_logger.cpp  notification_logic_plugin.cpp  notification_type.cpp  notify_logic_plugin.cpp  notify_model.cpp  type_manager.cpp
plugins/logicPlugin/: CMakeLists.txt
