project(core
    LANGUAGES CXX)

# add CMAKE_AUTOMOC, CMAKE_AUTORCC, CMAKE_AUTOUIC
AUTO_BUILD_RESOURCES_QT5()

INCLUDE_SOURCES(${PROJECT_NAME})

add_library(core STATIC ${HEADERS} ${SOURCES})
set_target_properties(${PROJECT_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib
)
add_library(${PROJECT_NAMESPACE}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

GENERATE_EXPORT_HEADERS(TARGET ${PROJECT_NAME} DIR include)

set(QT_COMPONENTS
        Core Widgets
        QuickWidgets
        Core
        QuickControls2)

target_include_directories(
        ${PROJECT_NAME}
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

FIND_AND_LINK_QT(TARGET ${PROJECT_NAME}
    QT_COMPONENTS
    ${QT_COMPONENTS})

SET_BASE_TARGET_PROPERTIES(${PROJECT_NAME})

BUILD_STRUCTURING()
